--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="theSatrap">
   <head>
     <meta charset="utf-8">
     <title>The Satrap</title>
+    <script src="lib/angular/angular.min.js" charset="utf-8"></script>
+    <script src="lib/angular/angular-route.min.js" charset="utf-8"></script>
+
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
   </head>
   <body>
-
+    <div ng-controller="MoviesController">
+      <input type="text" name="movieTitle" ng-model="_title" ng-model-options="{getterSetter: true}" />
+        <h2>{{movie.Title}}</h2>
+        <h3>{{movie.Year}}</h3>
+    </div>
   </body>
 </html>
