--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>The Satrap</title>
-    <script src="lib/angular/angular.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/style.css" media="screen" charset="utf-8">
+    <script src="lib/angular/angular.js" charset="utf-8"></script>
     <script src="lib/angular/angular-route.min.js" charset="utf-8"></script>
 
     <script src="js/app.js"></script>
@@ -11,9 +12,16 @@
   </head>
   <body>
     <div ng-controller="MoviesController">
-      <input type="text" name="movieTitle" ng-model="_title" ng-model-options="{getterSetter: true}" />
-        <h2>{{movie.Title}}</h2>
-        <h3>{{movie.Year}}</h3>
+      <input type="text" ng-model="movieTitle" ng-change="writeTitle(movieTitle)">
+      <ul ng-repeat="item in movies">
+        <li>
+          <img ng-src="{{item.Poster}}" alt="Poster for {{item.Title}}" />
+          <div class="movie-info">
+            <h2>{{item.Title}}</h2>
+            <h3>{{item.Year}}</h3>
+          </div>
+        </li>
+      </ul>
     </div>
   </body>
 </html>
