Fixed the grammar

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <img src="img/satrap.png" alt="The Satrap logo" />
     <h1>The Satrap</h1>
     <p>
-      This is an early build of The Satrap; an upcoming site dedicated to review
-      and discuss all kinds of media.
+      This is an early build of The Satrap; an upcoming site dedicated to reviewing
+      and discussing all kinds of media.
     </p>
     <p>
       As of now, the only working functionality is a search tool for movies
