--- a/index.html
+++ b/index.html
@@ -6,18 +6,17 @@
     <link rel="stylesheet" href="styles/css/main.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <img src="img/satrap.png" alt="The Satrap logo" />
-    <h1>The Satrap</h1>
-    <p>
-      This is an early build of The Satrap; an upcoming site dedicated to reviewing
-      and discussing all kinds of media.
-    </p>
-    <p>
-      As of now, the only working functionality is a search tool for movies
-      and tv shows.
-    </p>
-    <div ng-view=""></div>
-
+    <div class="wrapper">
+      <h1 class="main-title"><span>The Satrap</span></h1>
+      <div ng-view=""></div>
+      <div class="centered-content small-size col-6">
+        <p>
+          This is an early build of The Satrap; an upcoming site dedicated to reviewing
+          and discussing all kinds of media. As of now, the only working functionality 
+          is a search tool for movies and tv shows.
+        </p>
+      </div>
+    </div>
     <!-- lib components -->
     <script src="scripts/libs/angular/angular.js" charset="utf-8"></script>
     <script src="scripts/libs/angular/angular-route.min.js" charset="utf-8"></script>
