--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <div class="wrapper">
       <h1 class="main-title"><span>The Satrap</span></h1>
       <div ng-view=""></div>
-      <div class="centered-content small-size col-6">
+      <!--<div class="centered-content small-size col-6">
         <p>
           This is an early build of The Satrap; an upcoming site dedicated to reviewing
-          and discussing all kinds of media. As of now, the only working functionality 
+          and discussing all kinds of media. As of now, the only working functionality
           is a search tool for movies and tv shows.
         </p>
-      </div>
+      </div>-->
     </div>
     <!-- lib components -->
     <script src="scripts/libs/angular/angular.js" charset="utf-8"></script>
     <script src="scripts/libs/angular/angular-route.min.js" charset="utf-8"></script>
-    
+
     <!-- app components -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/movieList.js"></script>
