--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- lib components -->
     <script src="scripts/libs/angular/angular.js" charset="utf-8"></script>
     <script src="scripts/libs/angular/angular-route.min.js" charset="utf-8"></script>
+    <script src="scripts/libs/angular/angular-resource.min.js" charset="utf-8"></script>
 
     <!-- app components -->
     <script src="scripts/app.js"></script>
