Adds a custom filter to group crew members by job

--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
     <script src="scripts/libs/angular/angular.js" charset="utf-8"></script>
     <script src="scripts/libs/angular/angular-route.min.js" charset="utf-8"></script>
     <script src="scripts/libs/angular/angular-resource.min.js" charset="utf-8"></script>
+    <script src="scripts/libs/angular/angular-animate.min.js" charset="utf-8"></script>
 
     <!-- app components -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/movieList.js"></script>
     <script src="scripts/controllers/movieItem.js"></script>
+    <script src="scripts/factories/groupByJobFilter.js"></script>
 
   </body>
 </html>
