Fixes YouTube embedding in the movieItem view

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="scripts/controllers/movieList.js"></script>
     <script src="scripts/controllers/movieItem.js"></script>
     <script src="scripts/factories/groupByJobFilter.js"></script>
+    <script src="scripts/factories/trustedFilter.js"></script>
 
   </body>
 </html>
